--- a/layout-tools/index.html
+++ b/layout-tools/index.html
@@ -10,7 +10,8 @@
 
     <style>
         .columns>div {
-            background: #AAD; 
+            background: #AAD;
+            color: #333;
         }
     </style>
 </head>
