--- a/layout-tools/index.html
+++ b/layout-tools/index.html
@@ -12,6 +12,7 @@
         .columns>div {
             background: #AAD;
             color: #333;
+            padding: 1rem;
         }
     </style>
 </head>
