add styles folder, add example folder

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NS Layout Testing</title>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="../styles/variables.css">
+    <link rel="stylesheet" href="../styles/layout.css">
+    <link rel="stylesheet" href="../styles/mod-cards.css">
 
     <style>
         .columns>div {
             background: #AAD;
-            color: #333;
-            padding: 1rem;
         }
     </style>
 </head>
