add transparency to --color-dark-gray and --color-dark

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,9 @@
     <title>NS Layout Testing</title>
     <link rel="stylesheet" href="../styles/variables.css">
     <link rel="stylesheet" href="../styles/layout.css">
+    <link rel="stylesheet" href="../styles/type.css">
+    <link rel="stylesheet" href="../styles/decorations.css">
+    <link rel="stylesheet" href="../styles/images.css">
     <link rel="stylesheet" href="../styles/mod-cards.css">
 
     <style>
