--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -41,6 +41,30 @@
     </div>
   </div>
 
+  <hr>
+
+  <div class="container">
+    <div class="columns md-3 lg-3 xl-3">
+      <div>
+        <p><a class="button button--size_sm arrow-button" href="">SEND</a></p>
+        <p><a class="button arrow-button" href="">EXAMPLE</a></p>
+        <p><a class="button button--size_lg arrow-button" href="">APPLY NOW</a></p>
+      </div>
+
+      <div>
+        <p><a class="button button--primary button--size_sm arrow-button" href="">CONTACT US</a></p>
+        <p><a class="button button--primary arrow-button" href="">TAKE ACTION</a></p>
+        <p><a class="button button--primary button--size_lg arrow-button" href="">Learn More...</a></p>
+      </div>
+
+      <div>
+        <p><a class="button button--discrete button--size_sm arrow-button" href="">Learn More...</a></p>
+        <p><a class="button button--discrete arrow-button" href="">Call Us Now</a></p>
+        <p><a class="button button--discrete button--size_lg arrow-button" href="">View More</a></p>
+      </div>
+    </div>
+  </div>
+
 
 
 
