--- a/examples/footer.html
+++ b/examples/footer.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../styles/layout.css">
   <link rel="stylesheet" href="../styles/mod-cards.css">
   <link rel="stylesheet" href="../styles/debris.css">
+  <link rel="stylesheet" href="../css-readable/main.css">
 
 </head>
 
