--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -9,10 +9,7 @@
   <link rel="stylesheet" href="../styles/variables.css">
   <link rel="stylesheet" href="../styles/layout.css">
   <link rel="stylesheet" href="../styles/type.css">
-  <link rel="stylesheet" href="../styles/decorations.css">
-  <link rel="stylesheet" href="../styles/images.css">
-  <link rel="stylesheet" href="../styles/mod-cards.css">
-  <link rel="stylesheet" href="../styles/buttons.css">
+  <link rel="stylesheet" href="../styles/buttons2.css">
 
 
 </head>
@@ -22,22 +19,24 @@
   <div class="container">
     <div class="columns md-3 lg-3 xl-3">
       <div>
-        <p><a class="button button--size_sm" href="">SEND</a></p>
-        <p><a class="button" href="">EXAMPLE</a></p>
-        <p><a class="button button--size_lg" href="">APPLY NOW</a></p>
+        <p><a class="button sm" href="">BUTTON</a></p>
+        <p><a class="button" href="">BUTTON</a></p>
+        <p><a class="button lg" href="">BUTTON</a></p>
       </div>
 
       <div>
-        <p><a class="button button--primary button--size_sm" href="">CONTACT US</a></p>
-        <p><a class="button button--primary" href="">TAKE ACTION</a></p>
-        <p><a class="button button--primary button--size_lg" href="">Learn More...</a></p>
+        <p><a class="button-gray sm" href="">Button</a></p>
+        <p><a class="button-gray" href="">Button</a></p>
+        <p><a class="button-gray lg" href="">Button</a></p>
       </div>
 
       <div>
-        <p><a class="button button--discrete button--size_sm" href="">Learn More...</a></p>
-        <p><a class="button button--discrete" href="">Call Us Now</a></p>
-        <p><a class="button button--discrete button--size_lg" href="">View More</a></p>
+        <p><a class="button-solid sm" href=""><span>Button</span></a></p>
+        <p><a class="button-solid" href=""><span>Button</span></a></p>
+        <p><a class="button-solid lg" href=""><span>Button</span></a></p>
       </div>
+
+      
     </div>
   </div>
 
