solid button without <span>

--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="../styles/type.css">
   <link rel="stylesheet" href="../styles/buttons.css">
 
-
 </head>
 
 <body>
@@ -31,43 +30,14 @@
       </div>
 
       <div>
-        <p><a class="button-solid sm" href=""><span>Button</span></a></p>
-        <p><a class="button-solid" href=""><span>Button</span></a></p>
-        <p><a class="button-solid lg" href=""><span>Button</span></a></p>
+        <p><a class="button-solid sm" href="">Button</a></p>
+        <p><a class="button-solid" href="">Button</a></p>
+        <p><a class="button-solid lg" href="">Button</a></p>
       </div>
 
       
     </div>
   </div>
-
-  <hr>
-
-  <div class="container">
-    <div class="columns md-3 lg-3 xl-3">
-      <div>
-        <p><a class="button button--size_sm arrow-button" href="">SEND</a></p>
-        <p><a class="button arrow-button" href="">EXAMPLE</a></p>
-        <p><a class="button button--size_lg arrow-button" href="">APPLY NOW</a></p>
-      </div>
-
-      <div>
-        <p><a class="button button--primary button--size_sm arrow-button" href="">CONTACT US</a></p>
-        <p><a class="button button--primary arrow-button" href="">TAKE ACTION</a></p>
-        <p><a class="button button--primary button--size_lg arrow-button" href="">Learn More...</a></p>
-      </div>
-
-      <div>
-        <p><a class="button button--discrete button--size_sm arrow-button" href="">Learn More...</a></p>
-        <p><a class="button button--discrete arrow-button" href="">Call Us Now</a></p>
-        <p><a class="button button--discrete button--size_lg arrow-button" href="">View More</a></p>
-      </div>
-    </div>
-  </div>
-
-
-
-
-
 </body>
 
 </html>
