buttons.css cleanup

--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -24,18 +24,18 @@
       </div>
 
       <div>
-        <p><a class="button-gray sm" href="">Button</a></p>
-        <p><a class="button-gray" href="">Button</a></p>
-        <p><a class="button-gray lg" href="">Button</a></p>
+        <p><a class="button button-gray sm" href="">Button</a></p>
+        <p><a class="button button-gray" href="">Button</a></p>
+        <p><a class="button button-gray lg" href="">Button</a></p>
       </div>
 
       <div>
-        <p><a class="button-solid sm" href="">Button</a></p>
-        <p><a class="button-solid" href="">Button</a></p>
-        <p><a class="button-solid lg" href="">Button</a></p>
+        <p><a class="button button-solid sm" href="">Button</a></p>
+        <p><a class="button button-solid" href="">Button</a></p>
+        <p><a class="button button-solid lg" href="">Button</a></p>
       </div>
 
-      
+
     </div>
   </div>
 </body>
