--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -35,8 +35,30 @@
         <p><a class="button button-solid lg" href="">Button</a></p>
       </div>
 
+    </div>
+
+    <hr>
+
+    <div class="columns md-3 lg-3 xl-3">
+      <div>
+        <p><a class="button button-arrow sm" href="">BUTTON</a></p>
+      </div>
+
+      <div>
+        <p><a class="button button-gray button-arrow" href="">Button</a></p>
+      </div>
+
+      <div>
+        <p><a class="button button-solid button-arrow lg" href="">Button</a></p>
+      </div>
+
+      <div class="md-span-3">
+        <p>Nevermind the arrow it's an unicode and we need to replace it with a proper SVG icon, but I think it's very
+          cool that we can add it with just a class (.button-arrow).</p>
+      </div>
 
     </div>
+
   </div>
 </body>
 
