--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>NS Layout Testing</title>
-  <link rel="stylesheet" href="../styles/variables.css">
-  <link rel="stylesheet" href="../styles/layout.css">
-  <link rel="stylesheet" href="../styles/type.css">
-  <link rel="stylesheet" href="../styles/buttons.css">
+  <link rel="stylesheet" href="../dist/main.css">
 
 </head>
 
